feat: enhance JWT validation with issuer checks and security improvements
- Add validation for JWT token issuer to prevent SSRF attacks by rejecting invalid issuers before fetching keys.
- Update README with detailed instructions on valid issuers for Webex identity brokers.
- Modify configuration to include a specific datasource URL.
- Enhance unit tests to ensure invalid issuers are handled correctly and do not trigger key fetching.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -86,7 +86,7 @@ jwt_validation:
   # Datasource URL - must match the URL configured in your Webex Contact Center datasource
   # This should be the publicly accessible URL of your gateway (including port if non-standard)
   # Example: "https://your-gateway-domain.com:443"
-  datasource_url: ""
+  datasource_url: "https://b9eb5df4443d.ngrok-free.app"
   
   # Datasource schema UUID - typically this is the BYOVA schema UUID
   # This is the schema ID from https://github.com/webex/dataSourceSchemas
